[gd_scene load_steps=2 format=3 uid="uid://dfnbj8m8lwmqq"]

[ext_resource type="Script" uid="uid://cqnu467ixo4sm" path="res://scripts/ui/LocaleMenuPanel.gd" id="1"]

[node name="LocaleMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="LocaleMenu#EnglishButton" type="Button" parent="."]
layout_mode = 0
offset_left = 82.0
offset_top = 163.0
offset_right = 145.0
offset_bottom = 194.0
text = "English"

[node name="LocaleMenu#PolishButton" type="Button" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 130.0
offset_right = 141.0
offset_bottom = 161.0
text = "Polish"

[node name="LocaleMenu#UkrainianButton" type="Button" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 96.0
offset_right = 156.0
offset_bottom = 127.0
text = "Ukrainian"

[node name="LocaleMenu#Title" type="Label" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 70.0
offset_right = 155.0
offset_bottom = 93.0
text = "Language"

[node name="LocaleMenu#BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 93.0
offset_top = 208.0
offset_right = 138.0
offset_bottom = 239.0
text = "Back"
